--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body {
 /* Make content area fill the entire browser window */
 html,
 .fullscreen {
-  
+    margin: auto;
+  text-align: center;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -21,3 +22,6 @@ html,
 .title {
   font-size: 3rem;
 }
+
+
+a { font-size: 20px; padding: 20px; display: block;}
